SFDC Automation/src/objects/from_Discover_ELQA_Marketing_Activity__c.object
<CustomObject>
    <fields>
        <fullName>EDP1_ActivityDate__c</fullName>
        <label>Eloqua Discover Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDP1_ActivityType__c</fullName>
        <label>Eloqua Discover Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_ActivityUrl__c</fullName>
        <label>Eloqua Discover Activity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EDP1_AssetName__c</fullName>
        <label>Eloqua Discover Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_AssetType__c</fullName>
        <label>Eloqua Discover Asset Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_Asset__c</fullName>
        <label>Eloqua Discover Asset</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_Description__c</fullName>
        <label>Eloqua Discover Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_ErrorText__c</fullName>
        <label>Eloqua Discover Error Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua Discover Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1_IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua Discover Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1_OwnerId__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_ProspectId__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Prospect Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1_SortKey__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua Discover Sort Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>from_Discover_ELQA_Marketing_Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ELQA_Marketing_Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>from_Discover_ELQA_Marketing_Activity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>